use record instead of self-implemented class